--- a/jdnp3-stack/pom.xml
+++ b/jdnp3-stack/pom.xml
@@ -2,34 +2,22 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>net.sf.jdnp3</groupId>
-	<artifactId>dnp3-stack</artifactId>
-	<version>0.0.1</version>
+	<parent>
+		<groupId>net.sf.jdnp3</groupId>
+		<artifactId>jdnp3-project</artifactId>
+		<version>0.0.1</version>
+		<relativePath>../jdnp3/pom.xml</relativePath>
+	</parent>
+	
+	<name>jdnp3-stack</name>
+	<artifactId>jdnp3-stack</artifactId>
 	<packaging>jar</packaging>
 
-	<name>dnp3-stack</name>
-	<url>http://maven.apache.org</url>
 
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<org.apache.commons.lang3.version>3.4</org.apache.commons.lang3.version>
 		<ch.qos.logback.version>1.1.2</ch.qos.logback.version>
-		<org.slf4j.version>1.7.6</org.slf4j.version>
 	</properties>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
-				<configuration>
-						<source>1.8</source>
-						<target>1.8</target>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 
 	<dependencies>
 		<dependency>
@@ -38,11 +26,6 @@
 			<version>${org.apache.commons.lang3.version}</version>
 		</dependency>
 		
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>${org.slf4j.version}</version>
-		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jcl-over-slf4j</artifactId>
@@ -64,6 +47,5 @@
 			<artifactId>logback-core</artifactId>
 			<version>${ch.qos.logback.version}</version>
 		</dependency>
-		
 	</dependencies>
 </project>
