--- a/jdnp3-ui-web-outstation/pom.xml
+++ b/jdnp3-ui-web-outstation/pom.xml
@@ -2,16 +2,18 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>net.sf.jdnp3</groupId>
-	<artifactId>ui-web-outstation</artifactId>
-	<version>0.0.1</version>
+	<parent>
+		<groupId>net.sf.jdnp3</groupId>
+		<artifactId>jdnp3-project</artifactId>
+		<version>0.0.1</version>
+		<relativePath>../jdnp3/pom.xml</relativePath>
+	</parent>
+
+	<name>jdnp3-ui-web-outstation</name>
+	<artifactId>jdnp3-ui-web-outstation</artifactId>
 	<packaging>jar</packaging>
 
-	<name>dnp3-stack</name>
-	<url>http://maven.apache.org</url>
-
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<uk.com.robust-it.cloning.version>1.9.2</uk.com.robust-it.cloning.version>
 		<org.apache.commons.lang3.version>3.4</org.apache.commons.lang3.version>
 		<org.apache.myfaces.core.version>2.2.8</org.apache.myfaces.core.version>
@@ -21,24 +23,15 @@
 		<ch.qos.logback.version>1.1.3</ch.qos.logback.version>
 		<org.primefaces.version>5.1</org.primefaces.version>
 		<commons-codec.version>1.10</commons-codec.version>
-		<org.slf4j.version>1.7.12</org.slf4j.version>
 	</properties>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-
 	<dependencies>
+		<dependency>
+			<groupId>net.sf.jdnp3</groupId>
+			<artifactId>jdnp3-stack</artifactId>
+			<version>${net.sf.jdnp3.version}</version>
+		</dependency>
+	
 		<dependency>
 			<groupId>org.primefaces</groupId>
 			<artifactId>primefaces</artifactId>
@@ -144,11 +137,6 @@
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>${org.slf4j.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
 			<artifactId>jcl-over-slf4j</artifactId>
 			<version>${org.slf4j.version}</version>
 		</dependency>
@@ -167,25 +155,6 @@
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-core</artifactId>
 			<version>${ch.qos.logback.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-all</artifactId>
-			<version>1.3</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.jmockit</groupId>
-			<artifactId>jmockit</artifactId>
-			<version>1.18</version>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
