--- a/jdnp3/pom.xml
+++ b/jdnp3/pom.xml
@@ -59,6 +59,7 @@
 	
 	<modules>
 		<module>../jdnp3-stack</module>
+		<module>../jdnp3-test-utils</module>
 		<module>../jdnp3-ui-web-outstation</module>
 	</modules>
 </project>
