--- a/jdnp3-test-utils/pom.xml
+++ b/jdnp3-test-utils/pom.xml
@@ -15,6 +15,7 @@
 
 	<properties>
 		<org.apache.commons.beanutils.version>1.9.2</org.apache.commons.beanutils.version>
+		<org.apache.commons.codec.version>1.10</org.apache.commons.codec.version>
 		<org.apache.commons.lang3.version>3.4</org.apache.commons.lang3.version>
 		<ch.qos.logback.version>1.1.2</ch.qos.logback.version>
 	</properties>
@@ -29,6 +30,11 @@
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils</artifactId>
 			<version>${org.apache.commons.beanutils.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>${org.apache.commons.codec.version}</version>
 		</dependency>
 		
 		<dependency>
