--- a/jdnp3-stack/pom.xml
+++ b/jdnp3-stack/pom.xml
@@ -15,6 +15,7 @@
 
 
 	<properties>
+		<org.apache.commons.beanutils.version>1.9.2</org.apache.commons.beanutils.version>
 		<org.apache.commons.lang3.version>3.4</org.apache.commons.lang3.version>
 		<ch.qos.logback.version>1.1.2</ch.qos.logback.version>
 	</properties>
@@ -24,6 +25,17 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>${org.apache.commons.lang3.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>${org.apache.commons.beanutils.version}</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>commons-logging</artifactId>
+					<groupId>commons-logging</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		
 		<dependency>
