Added JSON API and allowed outstations to be created and modified via this.

--- a/jdnp3-ui-web-outstation/src/main/webapp/WEB-INF/web.xml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/WEB-INF/web.xml
@@ -43,11 +43,11 @@
 
 	<servlet>
 		<servlet-name>restapi</servlet-name>
-		<servlet-class>net.sf.jdnp3.ui.web.outstation.ui.web.RestApiServlet</servlet-class>
+		<servlet-class>net.sf.jdnp3.ui.web.outstation.ui.web.JsonApiServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>restapi</servlet-name>
-		<url-pattern>/servlet/restapi</url-pattern>
+		<url-pattern>/servlet/jsonapi</url-pattern>
 	</servlet-mapping>
 	
 	<welcome-file-list>
