Started to deploy findbugs and checkstyle.

--- a/jdnp3-ui-web-outstation/pom.xml
+++ b/jdnp3-ui-web-outstation/pom.xml
@@ -37,8 +37,7 @@
 						<filter>
 							<artifact>*:*</artifact>
 							<excludes>
-								<exclude>jetty.xml</exclude>
-								<exclude>logback.xml</exclude>
+								<exclude>/src/main/resources/*</exclude>
 								<exclude>META-INF/*.SF</exclude>
 								<exclude>META-INF/*.DSA</exclude>
 								<exclude>META-INF/*.RSA</exclude>
