--- a/jdnp3-ui-web-outstation/pom.xml
+++ b/jdnp3-ui-web-outstation/pom.xml
@@ -44,6 +44,16 @@
 							</excludes>
 						</filter>
 					</filters>
+					<transformers>
+						<transformer
+							implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+							<resource>META-INF/spring.handlers</resource>
+						</transformer>
+						<transformer
+							implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+							<resource>META-INF/spring.schemas</resource>
+						</transformer>
+					</transformers>
 				</configuration>
 				<executions>
 					<execution>
