--- a/jdnp3-ui-web-outstation/pom.xml
+++ b/jdnp3-ui-web-outstation/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>net.sf.jdnp3</groupId>
 		<artifactId>jdnp3-project</artifactId>
-		<version>0.5.0-alpha3</version>
+		<version>0.5.0</version>
 		<relativePath>../jdnp3/pom.xml</relativePath>
 	</parent>
 
