--- a/jdnp3-ui-web-outstation/pom.xml
+++ b/jdnp3-ui-web-outstation/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>net.sf.jdnp3</groupId>
 		<artifactId>jdnp3-project</artifactId>
-		<version>0.9.0</version>
+		<version>1.0.0-alpha3</version>
 		<relativePath>../jdnp3/pom.xml</relativePath>
 	</parent>
 
@@ -15,10 +15,11 @@
 
 	<properties>
 		<org.apache.commons.lang3.version>3.4</org.apache.commons.lang3.version>
-		<org.apache.myfaces.core.version>2.2.8</org.apache.myfaces.core.version>
+		<org.apache.myfaces.core.version>2.2.11</org.apache.myfaces.core.version>
 		<org.springframework.version>4.1.7.RELEASE</org.springframework.version>
-		<org.eclipse.jetty.version>9.3.1.v20150714</org.eclipse.jetty.version>
+		<org.eclipse.jetty.version>9.4.0.v20161208</org.eclipse.jetty.version>
 		<com.google.code.gson.version>2.3.1</com.google.code.gson.version>
+		<org.apache.tomcat.embed>9.0.0.M15</org.apache.tomcat.embed>
 		<ch.qos.logback.version>1.1.3</ch.qos.logback.version>
 		<commons-codec.version>1.10</commons-codec.version>
 		<commons-io.version>2.4</commons-io.version>
@@ -105,11 +106,13 @@
 			<artifactId>jetty-webapp</artifactId>
 			<version>${org.eclipse.jetty.version}</version>
 		</dependency>
+
 		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-jsp</artifactId>
-			<version>9.3.0.M1</version>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-el</artifactId>
+			<version>${org.apache.tomcat.embed}</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-annotations</artifactId>
