--- a/jdnp3-ui-web-outstation/src/main/webapp/WEB-INF/web.xml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/WEB-INF/web.xml
@@ -7,12 +7,17 @@
 	<session-config>
 		<session-timeout>1</session-timeout>
 	</session-config>
-	
+
+	<context-param>
+		<param-name>javax.faces.DEFAULT_SUFFIX</param-name>
+		<param-value>.xhtml</param-value>
+	</context-param>
+
 	<context-param>
 		<param-name>facelets.LIBRARIES</param-name>
 		<param-value>/WEB-INF/jdnp3.taglib.xml</param-value>
-	 </context-param>
-	
+	</context-param>
+
 	<context-param>
 		<param-name>javax.faces.FACELETS_REFRESH_PERIOD</param-name>
 		<param-value>0</param-value>
@@ -49,7 +54,7 @@
 		<servlet-name>restapi</servlet-name>
 		<url-pattern>/servlet/jsonapi</url-pattern>
 	</servlet-mapping>
-	
+
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
