--- a/jdnp3-stack/pom.xml
+++ b/jdnp3-stack/pom.xml
@@ -1,5 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -13,11 +13,9 @@
 	<artifactId>jdnp3-stack</artifactId>
 	<packaging>jar</packaging>
 
-
 	<properties>
 		<org.apache.commons.beanutils.version>1.9.3</org.apache.commons.beanutils.version>
 		<org.apache.commons.lang3.version>3.8.1</org.apache.commons.lang3.version>
-		<uk.com.robust-it.cloning.version>1.9.10</uk.com.robust-it.cloning.version>
 		<ch.qos.logback.version>1.2.1</ch.qos.logback.version>
 	</properties>
 
@@ -40,9 +38,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>uk.com.robust-it</groupId>
-			<artifactId>cloning</artifactId>
-			<version>${uk.com.robust-it.cloning.version}</version>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
 		</dependency>
 
 		<dependency>
