--- a/jdnp3/pom.xml
+++ b/jdnp3/pom.xml
@@ -1,5 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>net.sf.jdnp3</groupId>
@@ -8,27 +8,16 @@
 	<packaging>pom</packaging>
 
 	<name>jdnp3-project</name>
-	<url>http://sourceforge.net/projects/jdnp3/</url>
+	<url>https://github.com/gazzasaur/jdnp3</url>
 
 	<properties>
+		<maven.compiler.target>21</maven.compiler.target>
+		<maven.compiler.source>21</maven.compiler.source>
+
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<net.sf.jdnp3.version>0.9.8</net.sf.jdnp3.version>
-		<org.slf4j.version>1.7.25</org.slf4j.version>
+		<org.slf4j.version>1.7.36</org.slf4j.version>
 	</properties>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
-				<configuration>
-						<source>1.8</source>
-						<target>1.8</target>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 
 	<dependencies>
 		<dependency>
@@ -46,7 +35,7 @@
 			<artifactId>jul-to-slf4j</artifactId>
 			<version>${org.slf4j.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -59,14 +48,8 @@
 			<version>1.3</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.jmockit</groupId>
-			<artifactId>jmockit</artifactId>
-			<version>1.18</version>
-			<scope>test</scope>
-		</dependency>
 	</dependencies>
-	
+
 	<modules>
 		<module>../jdnp3-stack</module>
 		<module>../jdnp3-test-utils</module>
