--- a/jdnp3-ui-web-outstation/pom.xml
+++ b/jdnp3-ui-web-outstation/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>net.sf.jdnp3</groupId>
 		<artifactId>jdnp3-project</artifactId>
-		<version>0.11.0-alpha-01</version>
+		<version>0.11.0-alpha-02</version>
 		<relativePath>../jdnp3/pom.xml</relativePath>
 	</parent>
 
@@ -16,7 +16,7 @@
 	<properties>
 		<org.apache.commons.lang3.version>3.8.1</org.apache.commons.lang3.version>
 		<org.apache.myfaces.core.version>2.2.11</org.apache.myfaces.core.version>
-		<org.springframework.version>4.2.5.RELEASE</org.springframework.version>
+		<org.springframework.version>6.1.0</org.springframework.version>
 		<org.eclipse.jetty.version>9.4.12.v20180830</org.eclipse.jetty.version>
 		<com.google.code.gson.version>2.8.2</com.google.code.gson.version>
 		<org.apache.tomcat.embed>9.0.0.M15</org.apache.tomcat.embed>
