--- a/jdnp3/pom.xml
+++ b/jdnp3/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>net.sf.jdnp3</groupId>
 	<artifactId>jdnp3-project</artifactId>
-	<version>0.11.0-alpha-02</version>
+	<version>0.12.0</version>
 	<packaging>pom</packaging>
 
 	<name>jdnp3-project</name>
@@ -15,7 +15,7 @@
 		<maven.compiler.source>17</maven.compiler.source>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<net.sf.jdnp3.version>0.11.0-alpha-02</net.sf.jdnp3.version>
+		<net.sf.jdnp3.version>0.12.0</net.sf.jdnp3.version>
 		<org.slf4j.version>1.7.36</org.slf4j.version>
 	</properties>
 
