--- a/jdnp3-ui-web-outstation/pom.xml
+++ b/jdnp3-ui-web-outstation/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>net.sf.jdnp3</groupId>
 		<artifactId>jdnp3-project</artifactId>
-		<version>0.12.5</version>
+		<version>0.12.7</version>
 		<relativePath>../jdnp3/pom.xml</relativePath>
 	</parent>
 
@@ -17,7 +17,8 @@
 		<org.apache.commons.lang3.version>3.8.1</org.apache.commons.lang3.version>
 		<org.apache.myfaces.core.version>2.2.11</org.apache.myfaces.core.version>
 		<org.springframework.version>5.3.39</org.springframework.version>
-		<org.eclipse.jetty.version>9.4.56.v20240826</org.eclipse.jetty.version>
+		<!-- Jetty has an issue in later versions when user.dir it will fail to find faces-config.xml -->
+		<org.eclipse.jetty.version>9.4.12.v20180830</org.eclipse.jetty.version>
 		<com.google.code.gson.version>2.11.0</com.google.code.gson.version>
 		<org.apache.tomcat.embed>9.0.0.M15</org.apache.tomcat.embed>
 		<ch.qos.logback.version>1.2.13</ch.qos.logback.version>
