--- a/jdnp3-ui-web-outstation/pom.xml
+++ b/jdnp3-ui-web-outstation/pom.xml
@@ -17,6 +17,7 @@
 		<org.apache.commons.lang3.version>3.8.1</org.apache.commons.lang3.version>
 		<org.apache.myfaces.core.version>2.2.11</org.apache.myfaces.core.version>
 		<org.springframework.version>5.3.39</org.springframework.version>
+		<!-- 9.4.12.v20180830 in exp version -->
 		<org.eclipse.jetty.version>9.4.57.v20241219</org.eclipse.jetty.version>
 		<com.google.code.gson.version>2.11.0</com.google.code.gson.version>
 		<org.apache.tomcat.embed>9.0.0.M15</org.apache.tomcat.embed>
